--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-  <title>Email Template w/ Bootstrap Grid</title>
+  <title>Email Template using Bootstrap Grid</title>
 </head>
 <body>
   <div id="whole-container"class="container-fluid vh-100">
